--- a/task_install-from-repo.yml
+++ b/task_install-from-repo.yml
@@ -1,7 +1,18 @@
+# Installs software for RedHat & Debian family from existing repository
+#
+#  Usage example
+#
+#  tasks:
+#    - include: task_install-from-repo.yml
+#      vars:
+#        install_from_repo_packages: "{{ common_pkgs + os_specific_pkgs }}"
+#
+#
+#
 ---
 
 # Install list of packages from APT for Debian-based OS
-- name: Install latest packages from repo (apt)
+- name: Install packages from repo (apt)
   apt:
     state: present
     name: "{{ item }}"
@@ -9,7 +20,7 @@
   with_items: "{{ install_from_repo_packages }}"
 
 # Install list of packages from YUM for RedHat-based OS
-- name: Install latest packages from repo (yum)
+- name: Install packages from repo (yum)
   yum:
     state: present
     name: "{{ item }}"
