--- a/task_remove-pkgs.yml
+++ b/task_remove-pkgs.yml
@@ -8,13 +8,8 @@
 #        remove_pkgs_list:
   #        - "mc"
 ---
-# Set package environment type
-- name: "Set package environment type"
-  set_fact:
-    os_pkg_env: "{% if ansible_os_family=='Debian' %}apt{% elif ansible_os_family=='RedHat' %}yum{% else %}UNKNOWN{% endif %}"
-
 # Remove packages with generic OS package manager
-- name: "Remove packages ({{ os_pkg_env }})"
+- name: "Remove packages"
   package:
     name: "{{ item }}"
     state: absent
