--- a/task_enable-at-boot.yml
+++ b/task_enable-at-boot.yml
@@ -3,7 +3,7 @@
 #  Usage example
 #
 #  tasks:
-#    - include: tasks/task_enable-at-boot.yml
+#    - import_tasks: task_enable-at-boot.yml
 #      vars:
 #        enable_at_boot_svc_list:
 #          - "rsyslog"
