--- a/task_install-from-pkgs.yml
+++ b/task_install-from-pkgs.yml
@@ -4,7 +4,7 @@
 #  Usage example
 #
 #  tasks:
-#    - include: tasks/task_install-from-pkgs.yml
+#    - import_tasks: task_install-from-pkgs.yml
 #      vars:
 #        install_from_pkgs_debug: yes
 #        install_from_pkgs_cachedir: "/tmp"
