--- a/task_expand-templates.yml
+++ b/task_expand-templates.yml
@@ -28,7 +28,7 @@
     path:     "{{ item.dest | dirname }}"
     owner:    "{{ item.owner }}"
     group:    "{{ item.group }}"
-    mode:     "{{ item.mode }}"
+    mode:     "u=rwx,g=rx,o=rx"
     state:    directory
     recurse:  yes
   with_items: "{{ expand_templates_list }}"
