Set default value (omit=>no) for template.backup pref

--- a/task_expand-templates.yml
+++ b/task_expand-templates.yml
@@ -44,7 +44,7 @@
     group:    "{{ item.group }}"
     mode:     "{{ item.mode }}"
     validate: "{{ item.validate | default(omit) }}"
-    backup:   "{{ item.backup }}"
+    backup:   "{{ item.backup | default(omit) }}"
   with_items: "{{ expand_templates_list }}"
   loop_control:
     label: "{{ item.src }}"
