--- a/task_firewalld-allow-svc.yml
+++ b/task_firewalld-allow-svc.yml
@@ -3,15 +3,23 @@
 #
 # Usage example
 #
-#   tasks:
-#   - import_tasks: task_firewalld-allow-svc.yml
-#     become: yes
-#     vars:
-#       port: 22
-#       protocol: tcp
+# - include_tasks: task_firewalld-allow-svc.yml
+#   become: yes
+#   vars:
+#     allow_svc_port: "{{ item.port }}"
+#     allow_svc_protocol: "{{ item.proto }}"
+#     allow_svc_hosts: "{{ item.hosts }}"
+#     allow_svc_comment: "{{ item.comment }}"
+#   loop_control:
+#     loop_var: allow_svc_item
+#   with_items:
+#     - comment: SYSLOG
+#       port: 514
+#       proto: udp
 #       hosts:
-#       - 192.168.1.0/24
-#       - 10.0.0.1/32
+#         - 192.168.0.1
+#         - 192.168.0.2
+#   tags: prime
 #
 ---
 - name: "Allow service :: {{ allow_svc_comment }}"
