Add second check firewall is started after it is reloaded

--- a/task_firewalld-zone.yml
+++ b/task_firewalld-zone.yml
@@ -86,3 +86,8 @@
     name: firewalld
     state: reloaded
     enabled: yes
+
+- name: "Ensure firewalld is running"
+  service:
+    name: firewalld
+    state: started
