--- a/task_firewalld-service.yml
+++ b/task_firewalld-service.yml
@@ -3,7 +3,7 @@
 # Usage example
 #
 #   tasks:
-#   - import_tasks: task_firewalld-service.yml
+#   - import_tasks: tasks/task_firewalld-service.yml
 #     become: yes
 #     vars:
 #       firewalld_svc_name: netflow
