--- a/task_gen-systemd-unit.yml
+++ b/task_gen-systemd-unit.yml
@@ -3,7 +3,7 @@
 #  Usage example
 #
 #   tasks:
-#   - import_tasks: task_gen-systemd-unit.yml
+#   - import_tasks: tasks/task_gen-systemd-unit.yml
 #     vars:
 #       gen_systemd_unit_name: "nprobe"
 #       gen_systemd_unit_exec: "/usr/local/bin/nprobe /etc/nprobe/nprobe.conf"
