--- a/task_hold-pkgs.yml
+++ b/task_hold-pkgs.yml
@@ -1,15 +1,14 @@
-# Prevent upgrade for installed packages in either RedHat- or Debian-based OS.
-# Version could be specified only for RedHat as `package-1.1`. For Debian,
-# packages would be held at current version
+# Prevent upgrade for installed package in either RedHat- or Debian-based OS.
+# -   respects version spec only for RedHat (e.g. `package-1.1`)
+# -   for Debian, version is stripped if present (e.g. `package=1.1`) and
+#     package is held at the current version
 #
 #  Usage example
 #
 #  tasks:
-#    - import_tasks: tasks/task_hold-pkgs.yml
+#    - import_tasks: tasks/task_hold-pkg.yml
 #      vars:
-#        hold_pkgs_list:
-#          - syslog-ng
-#          - mc
+#        hold_pkg_name: syslog-ng
 ---
 - name: "Ensure yum-versionlock available (yum)"
   become: yes
@@ -18,18 +17,16 @@
     state: present
   when: ansible_os_family == "RedHat"
 
-- name: "Hold packages at current state (yum)"
+- name: "Hold package at current state (yum)"
   become: yes
-  command: "yum versionlock add {{ item }}"
-  register: hold_pkgs_result
-  changed_when: 'versionlock added: 0' not in hold_pkgs_result.stdout
+  command: "yum versionlock add {{ hold_pkg_name }}"
+  register: hold_pkg_result
+  changed_when: "'versionlock added: 0' not in hold_pkg_result.stdout"
   when: ansible_os_family == "RedHat"
-  with_items: "{{ install_from_repo_packages }}"
 
-- name: "Hold packages at current state (apt)"
+- name: "Hold package at current state (apt)"
   become: yes
-  command: "apt-mark hold {{ item }}"
-  register: hold_pkgs_result
-  changed_when: 'was already set on hold' not in hold_pkgs_result.stdout
+  command: "apt-mark hold {{ hold_pkg_name.split('=')[0] }}"
+  register: hold_pkg_result
+  changed_when: "'was already set on hold' not in hold_pkg_result.stdout"
   when: ansible_os_family == "Debian"
-  with_items: "{{ hold_pkgs_list }}"
